--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -12,7 +12,7 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
 require conf/machine/include/ax.inc
 
-MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs v3d"
-#MACHINE_FEATURES += "kodi"
+MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs"
+#MACHINE_FEATURES += "v3d"
 
 DVBMEDIASINK_CONFIG = "--with-wma --with-wmv --with-pcm --with-dts --with-eac3"
