--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -12,7 +12,9 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
 require conf/machine/include/ax.inc
 
-MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs"
-#MACHINE_FEATURES += "v3d"
+MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs middleflash"
+
+# Broken bootloader can only flash around 100 MB
+FLASHSIZE = "96"
 
 DVBMEDIASINK_CONFIG = "--with-wma --with-wmv --with-pcm --with-dts --with-eac3"
