Cleanup MACHINE_FEATURES and get rid of middleflash for mipsel as we're going to use it global in OV

--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -12,7 +12,7 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
 require conf/machine/include/ax.inc
 
-MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs middleflash"
+MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs"
 
 # Broken bootloader can only flash around 100 MB
 FLASHSIZE = "96"
