Introduce KERNELVERSION variable and use it to have less hard-coded things.

--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -2,7 +2,9 @@
 #@NAME: AX Triplex
 #@DESCRIPTION: Machine configuration for the AX Triplex
 
-PREFERRED_VERSION_linux-ax = "4.10.6"
+KERNELVERSION = "4.10.6"
+
+PREFERRED_VERSION_linux-ax = "${KERNELVERSION}"
 
 SOC_FAMILY = "bcm7356"
 
