--- a/conf/machine/ultrabox.conf
+++ b/conf/machine/ultrabox.conf
@@ -2,7 +2,9 @@
 #@NAME: AX Ultrabox
 #@DESCRIPTION: Machine configuration for the AX Ultrabox
 
-PREFERRED_VERSION_linux-ax = "4.7.6"
+KERNELVERSION = "4.7.6"
+
+PREFERRED_VERSION_linux-ax = "${KERNELVERSION}"
 
 SOC_FAMILY = "bcm73625"
 
