Add RCTYPE and RCNAME definitons to use with new API.

--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -19,3 +19,5 @@ MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs RCA SCART YUV"
 FLASHSIZE = "96"
 
 DVBMEDIASINK_CONFIG = "--with-wma --with-wmv --with-pcm --with-dts --with-eac3"
+
+RCTYPE = "18"
