--- a/conf/machine/ultrabox.conf
+++ b/conf/machine/ultrabox.conf
@@ -14,3 +14,5 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 require conf/machine/include/ax.inc
 
 DVBMEDIASINK_CONFIG = "--with-wma --with-wmv --with-pcm --with-dts --with-eac3 --with-h265 --with-vb6 --with-vb8 --with-spark"
+
+MACHINE_FEATURES += "eDBoxLCD"
