Pre-install all graphic drivers

--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -5,6 +5,8 @@
 KERNELVERSION = "4.10.6"
 
 PREFERRED_VERSION_linux-ax = "${KERNELVERSION}"
+PREFERRED_PROVIDER_virtual/egl = "ax-v3ddriver-${MACHINE}" 
+PREFERRED_PROVIDER_virtual/libgles2 = "ax-v3ddriver-${MACHINE}"
 
 SOC_FAMILY = "bcm7356"
 
@@ -21,3 +23,7 @@ FLASHSIZE = "96"
 DVBMEDIASINK_CONFIG = "--with-wma --with-wmv --with-pcm --with-dts --with-eac3"
 
 RCTYPE = "18"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "\
+	ax-v3ddriver-${MACHINE} \
+	"
