Get ready for Kodi 19

--- a/conf/machine/triplex.conf
+++ b/conf/machine/triplex.conf
@@ -5,8 +5,8 @@
 KERNELVERSION = "4.10.6"
 
 PREFERRED_VERSION_linux-ax = "${KERNELVERSION}"
-PREFERRED_PROVIDER_virtual/egl = "ax-v3ddriver-${MACHINE}" 
-PREFERRED_PROVIDER_virtual/libgles2 = "ax-v3ddriver-${MACHINE}"
+PREFERRED_PROVIDER_virtual/egl ?= "ax-v3ddriver-${MACHINE}" 
+PREFERRED_PROVIDER_virtual/libgles2 ?= "ax-v3ddriver-${MACHINE}"
 
 SOC_FAMILY = "bcm7356"
 
@@ -15,7 +15,7 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB"
 
 require conf/machine/include/ax.inc
 
-MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs RCA SCART YUV"
+MACHINE_FEATURES += "dvb-c ci textlcd fan blindscan-tbs RCA SCART YUV kodi19"
 
 # Broken bootloader can only flash around 100 MB
 FLASHSIZE = "96"
